# web-backend

./: .env  .env.exemple  .gitignore  Cargo.toml  README.md  database.db  diesel.toml  log  resetup.sh  rustc-ice-2025-05-28T15_07_41-72514.txt  rustc-ice-2025-05-28T15_07_41-72515.txt
html/: auth.html  login.html  welcome.html
html/partials/: add-cart-menu.html  cart-product.html  create-category.html  edit-category.html  edit_product.html  product.html  products-aside.html  products-modal.html  select-category.html
html/static/: about.html  footer.html  header.html  nav.html
html/views/: auth.html  cart-user.html  dashboard.html  products.html  verify.html  welcome.html
migrations/2025-05-12-180906_create_products/: up.sql
migrations/2025-05-12-180909_create_categories/: up.sql
migrations/2025-05-12-180912_create_category_product/: down.sql  up.sql
migrations/2025-05-13-112010_create_orders/: up.sql
migrations/2025-05-13-112103_create_users/: up.sql
migrations/2025-05-13-112136_create_order_product/: down.sql  up.sql
migrations/2025-05-27-222301_create_commande/: up.sql
migrations/2025-05-28-123653_create_email_verification/: up.sql
public/css/: about.css  auth.css  cart.css  footer.css  header.css  log  nav.css  product.css  products-modal.css  products.css
public/js/: auth.js  cart.js  dashboard.js  products.js  test.js
sql/: seeder_category.sql  seeder_product.sql  seeder_user.sql  temp.sql  total.sql
src/: auth_middleware.rs  macros.rs  main.rs  models.rs  routes.rs  schema.rs  statics.rs  traits.rs  utilities.rs
src/models/: order.rs  (+13 more)
(+29 files in other folders)
